--- a/htdocs/public/another/index.html
+++ b/htdocs/public/another/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/">
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="/public/favicon.ico">
+    <link rel="icon" href="/public/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -25,9 +25,13 @@
     <link rel="stylesheet" href="/public/css/another.css">
   </head>
   <body>
-    <p>This is hoge page!</p>
-    <button>test</button>
+    <div class="test">
+      <div class="test__title">...</div>
+      <div class="test__image another"></div>
+      <p>This is hoge page!</p>
+      <button>test</button>
+    </div>
+    <script src="/public/js/vendor.js"></script>
     <script src="/public/js/another.js"></script>
-    <script src="/public/js/main.js"></script>
   </body>
 </html>
