--- a/htdocs/public/index.html
+++ b/htdocs/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/">
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="/public/favicon.ico">
+    <link rel="icon" href="/public/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -28,6 +28,7 @@
       <div class="test__title">...</div>
       <div class="test__image"></div>
     </div>
+    <script src="/public/js/vendor.js"></script>
     <script src="/public/js/main.js"></script>
   </body>
 </html>
