update : prettier 追加、 clean

--- a/htdocs/public/another/test/index.html
+++ b/htdocs/public/another/test/index.html
@@ -22,13 +22,14 @@
     <meta name="twitter:image:src" content="https://">
     <meta name="twitter:domain" content="https://">
     <link rel="stylesheet" href="/public/css/main.css">
+    <link rel="stylesheet" href="/public/css/home.css">
   </head>
   <body>
     <div class="test">
       <div class="test__title">...</div>
       <div class="test__image"></div>
     </div>
-    <script src="/public/js/vendor.js"></script>
     <script src="/public/js/main.js"></script>
+    <script src="/public/js/home.js"></script>
   </body>
 </html>
