--- a/htdocs/public/another/index.html
+++ b/htdocs/public/another/index.html
@@ -31,7 +31,7 @@
       <p>This is hoge page!</p>
       <button>test</button>
     </div>
-    <script src="/public/js/vendor.js"></script>
+    <script src="/public/js/main.js"></script>
     <script src="/public/js/another.js"></script>
   </body>
 </html>
